--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="background02">#f9f9fa</color>
     <color name="viewpagerGray">#e8e8ea</color>
     <color name="gray">#808080</color>
+    <color name="text_gray">#616161</color>
 
 
     <color name="MeasureBackground">#f1f6fd</color>
