01/23 수정사항 진행중 저장속도 개선

--- a/app/src/main/res/layout/activity_measure_one.xml
+++ b/app/src/main/res/layout/activity_measure_one.xml
@@ -693,7 +693,32 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ProgressBar
+
+    <RelativeLayout
+        android:id="@+id/save_progressLayout"
+        android:layout_width="@dimen/_200sdp"
+        android:layout_height="@dimen/_130sdp"
+        android:background="@color/white"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        >
+
+        <TextView
+            android:id="@+id/percent_txv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="100"
+            android:textColor="@color/black"
+            tools:textSize="@dimen/_50sdp"
+            />
+
+    </RelativeLayout>
+
+    <!--<ProgressBar
         android:id="@+id/save_progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -704,7 +729,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        />
+        />-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
