--- a/app/src/main/res/layout/activity_measure.xml
+++ b/app/src/main/res/layout/activity_measure.xml
@@ -1000,7 +1000,56 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ProgressBar
+    <RelativeLayout
+        android:id="@+id/save_progressLayout"
+        android:layout_width="@dimen/_200sdp"
+        android:layout_height="@dimen/_110sdp"
+        android:background="@color/white"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/save_two_progressLayout"
+        >
+
+        <TextView
+            android:id="@+id/percent_txv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="100"
+            android:textColor="@color/black"
+            tools:textSize="@dimen/_50sdp"
+            />
+
+    </RelativeLayout>
+
+
+    <RelativeLayout
+        android:id="@+id/save_two_progressLayout"
+        android:layout_width="@dimen/_200sdp"
+        android:layout_height="@dimen/_110sdp"
+        android:background="@color/white"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/save_progressLayout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        >
+
+        <TextView
+            android:id="@+id/two_percent_txv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="100"
+            android:textColor="@color/black"
+            tools:textSize="@dimen/_50sdp"
+            />
+
+    </RelativeLayout>
+
+    <!--<ProgressBar
         android:id="@+id/save_progressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -1011,7 +1060,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        />
+        />-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
