--- a/app/src/main/res/layout/activity1ch_main.xml
+++ b/app/src/main/res/layout/activity1ch_main.xml
@@ -153,7 +153,7 @@
             android:inputType="textPersonName"
             android:maxLength="10"
             android:maxLines="1"
-            android:nextFocusDown="@id/edit_age"
+            android:nextFocusDown="@id/birth_edt"
             android:padding="@dimen/_5sdp"
             android:singleLine="true"
             android:textColor="@color/black"
@@ -211,7 +211,7 @@
             app:layout_constraintTop_toBottomOf="@id/edit_name" />
 
         <EditText
-            android:id="@+id/edit_age"
+            android:id="@+id/birth_edt"
             android:layout_width="0dp"
             android:layout_height="48dp"
             android:layout_marginEnd="@dimen/_5sdp"
@@ -252,7 +252,7 @@
             android:textColorHint="#757575"
             android:textSize="@dimen/_6sdp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/edit_age"
+            app:layout_constraintStart_toEndOf="@id/birth_edt"
             app:layout_constraintTop_toBottomOf="@id/tv_dayOfBirth"
             tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
 
@@ -267,7 +267,7 @@
             android:textColor="@color/black"
             android:textSize="@dimen/_6sdp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/edit_age" />
+            app:layout_constraintTop_toBottomOf="@id/birth_edt" />
 
 
         <LinearLayout
@@ -450,10 +450,9 @@
                 android:text="@string/connect"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_8sdp"
-                app:layout_constraintBottom_toTopOf="@id/search_device"
                 app:layout_constraintEnd_toStartOf="@id/btn_device_close"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/spin_device" />
+                app:layout_constraintTop_toBottomOf="@id/spin_device"/>
 
             <Button
                 android:id="@+id/btn_device_close"
@@ -470,23 +469,6 @@
                 app:layout_constraintTop_toTopOf="@id/btn_device_open"
                 tools:ignore="TextContrastCheck" />
 
-
-            <Button
-                android:id="@+id/search_device"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/_25sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:background="@drawable/button_05"
-                android:fontFamily="@font/spoqahansansneo_bold"
-                android:text="@string/find_device"
-                android:textColor="@color/white"
-                android:textSize="@dimen/_8sdp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/btn_device_open"
-                app:layout_constraintVertical_chainStyle="spread_inside" />
-
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -496,8 +478,8 @@
             android:layout_height="0dp"
             android:minHeight="@dimen/_50sdp"
             android:contentDescription="@string/logo"
-            android:scaleType="centerInside"
-            android:layout_margin="@dimen/_10sdp"
+            android:scaleType="fitCenter"
+            android:layout_marginVertical="@dimen/_20sdp"
             android:src="@drawable/big_logo"
             app:layout_constraintBottom_toTopOf="@id/btn_device_measure"
             app:layout_constraintEnd_toEndOf="parent"
